--- a/test/BUILD
+++ b/test/BUILD
@@ -6,10 +6,10 @@ cc_test(
     srcs = ["application.cc","common.cc","logger.cc"],
     deps = [
         "@com_google_googletest//:gtest_main",
-        "@core//logger:console_logger",
-        "@core//application:simba_application",
-        "@core//common:common_converter",
-        "@core//common:common_types",
+        "//core/logger:console_logger",
+        "//core/application:simba_application",
+        "//core/common:common_converter",
+        "//core/common:common_types",
         ],
     visibility = ["//visibility:public"],
 )
@@ -19,7 +19,7 @@ cc_binary(
     srcs = ["benchmark/sample_benchmark.cc"],
     deps = [
         "@com_google_benchmark//:benchmark_main",
-        "@core//application:simba_application",
+        "//core/application:simba_application",
 
     ],
     visibility = ["//visibility:public"],
