--- a/logger/BUILD
+++ b/logger/BUILD
@@ -7,12 +7,12 @@ cc_library(
 
 cc_library(
     name = "Logger",
-    srcs = ["Logger.cpp","_console_logger.cpp"],
-    hdrs = ["Logger.h","_console_logger.hpp"],
-    visibility = ["@core//:__subpackages__"],
+    srcs = ["Logger.cpp"],
+    hdrs = ["Logger.h"],
+    visibility = ["//core:__subpackages__"],
     deps = [
         ":logger_interface",
-        "@core//common:common_types",
+        "//core/common:common_types",
     ],
     copts = ["-std=c++20"],
 )
