--- a/logger/BUILD
+++ b/logger/BUILD
@@ -6,6 +6,18 @@ cc_library(
 )
 
 cc_library(
+    name = "Logger",
+    srcs = ["Logger.cpp"],
+    hdrs = ["Logger.h"],
+    visibility = ["//core:__subpackages__"],
+    deps = [
+        ":logger_interface",
+        "//core/common:common_types",
+    ],
+    copts = ["-std=c++20"],
+)
+
+cc_library(
     name = "console_logger",
     srcs = ["console_logger.cc"],
     hdrs = ["console_logger.h"],
