--- a/results/BUILD
+++ b/results/BUILD
@@ -1,5 +1,5 @@
 cc_library(
     name = "results_lib",
     hdrs = ["result.h"],
-    visibility = ["//core:__subpackages__"],
+    visibility = ["//core:__subpackages__","//diag:__subpackages__"],
 )
